Finish layouts and routes

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,1 +1,9 @@
-<h2>Welcome to Sherlock App</h2>
+
+<div class="home-wrapper">  
+  <div class="jumbotron center">
+    <h1>Sherlock App</h1>
+    <p>Welcome to Sherlock Application where users can publish microposts and follow users.</p>
+    <hr>
+    <%= link_to 'Sign up here', signup_path, class: 'btn btn-lg btn-primary' %>
+  </div>
+</div>
