--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,3 +1,23 @@
-// Place all the styles related to the StaticPages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+.home-wrapper {
+  margin-top: 30px;
+}
+footer {
+  margin-top: 45px;
+  border-top: 1px solid #eaeaea;
+
+  h3 {
+    float: left;
+  }
+  nav {
+    float: right;
+    color: #fff;
+    a {
+      text-decoration: underline !important;
+      color: white !important;
+      &:hover {
+        text-decoration: none !important;
+        color: white !important;
+      }
+    }
+  }
+}
