--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,14 @@
 
   <body>
     <%= render 'layouts/header' %>
-    <div class="container">
+    <div class="container mt-2">
+      <% flash.each do |message_type, message| %>
+        <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
+      <% end %>
       <%= yield %>
+      <div class="fixed-bottom">
+        <%= debug(params) if Rails.env.development? %>
+      </div>
     </div>
     <%= render 'layouts/footer' %>
   </body>
