Implement basic login

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -22,8 +22,9 @@
         <%= f.password_field :password_confirmation, class: 'form-control' %>
        </div>
        <div class="form-group mt-4">
-        <%= f.submit "Create my account", class: 'btn btn-primary form-control' %>
+        <%= f.submit "Create my account", class: 'form-control btn btn-primary' %>
        </div>
     <% end %>
+    <p>Already have an account? <%= link_to 'Log in', login_path %></p>
   </div>
 </div>
