Finish user edit, update, index and destroy actions

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,11 +14,14 @@
               <%= link_to 'Help', help_path, class: 'nav-link'%>
           </li>
           <% if logged_in? %>
+            <li class="nav-item">
+              <%= link_to "Users", users_path, class: 'nav-link' %>
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href='#' id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account</a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                  <%= link_to "Profile", current_user, class: 'dropdown-item' %>
-                 <%= link_to "settings", '#', class: 'dropdown-item' %>
+                 <%= link_to "settings", edit_user_path(current_user), class: 'dropdown-item' %>
                  <hr class="divider"/>
                  <%= link_to 'Logout', logout_path, method: :delete, class: 'dropdown-item' %>
               </div>
