--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,29 +1,11 @@
 <% provide :title, 'Signup' %>
+<% provide(:button_text, 'Create my account') %>
 
 <div class="row">
   <div class="col-sm-6 offset-sm-2">
     <h2 class="text-center">Sign Up</h2>
     <%= form_for(@user, url: signup_path) do |f| %>
-      <%= render 'shared/error_messages' %>
-      <div class="form-group">
-        <%= f.label :name %>
-        <%= f.text_field :name, class: "form-control"%>
-      </div> 
-      <div class="form-group">
-        <%= f.label :email %>
-        <%= f.email_field :email, class: 'form-control' %>
-      </div>
-      <div class="form-group">
-        <%= f.label :password %>
-        <%= f.password_field :password, class: 'form-control'%>
-      </div>
-       <div classs="form-group">
-        <%= f.label :password_confirmation %>
-        <%= f.password_field :password_confirmation, class: 'form-control' %>
-       </div>
-       <div class="form-group mt-4">
-        <%= f.submit "Create my account", class: 'form-control btn btn-primary' %>
-       </div>
+      <%= render 'form', f: f %>
     <% end %>
     <p>Already have an account? <%= link_to 'Log in', login_path %></p>
   </div>
