--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<% provide(title: @user.name ) %>
+<% provide(:title, @user.name ) %>
 <div class="row">
   <aside class="user-info bg-secondary text-white mt-2 mr-2 p-3 rounded-lg col-sm-4">
     <div class="row no-gutters">
@@ -15,7 +15,13 @@
   </aside>
 
     <div class="col-sm-7 bg-secondary text-white mt-2 p-3">
-      this is for users microposts 
+      <% if @user.microposts.any? %>
+        <h3>Microposts (<%= @user.microposts.count %>)</h3>
+        <ol class="microposts">
+          <%= render @microposts %>
+        </ol>
+        <%= will_paginate @microposts %>
+      <% end %>
     </div>
   </div>
 
