--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/error_messages' %>
+<%= render 'shared/error_messages', object: f.object %>
 <div class="form-group">
   <%= f.label :name %>
   <%= f.text_field :name, class: "form-control"%>
