Add user following

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,6 +5,9 @@
       <section class="user_info">
         <%= render 'shared/user_info'%>
       </section>
+      <section class="stats text-center">
+        <%= render 'shared/stats' %>
+      </section>
       <section class="micropost-form">
         <%= render 'shared/micropost_form'%>
       </section>
