--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,21 +7,21 @@
           <%= gravatar_for( @user, class: 'rounded card-img-top' ) %>
         </div>
       </div>
-
       <div class="col-sm-6 text-center">
         <h2><%= @user.name %></h2>
+        <%= render 'shared/stats' %>
       </div>
     </div>
   </aside>
 
-    <div class="col-sm-7 bg-secondary text-white mt-2 p-3">
-      <% if @user.microposts.any? %>
-        <h3>Microposts (<%= @user.microposts.count %>)</h3>
-        <ol class="microposts">
-          <%= render @microposts %>
-        </ol>
-        <%= will_paginate @microposts %>
-      <% end %>
-    </div>
+  <div class="col-sm-7 bg-secondary text-white mt-2 p-3">
+    <%= render 'follow_form' if logged_in? %>
+    <% if @user.microposts.any? %>
+      <h3 class="mt-2">Microposts (<%= @user.microposts.count %>)</h3>
+      <ol class="microposts">
+        <%= render @microposts %>
+      </ol>
+      <%= will_paginate @microposts %>
+    <% end %>
   </div>
-
+</div>
