--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -20,6 +20,7 @@ div.pagination {
   .disabled {
     color: #aaaaaa;
   }
+
   .current {
     font-style: normal;
     font-weight: bold;
@@ -36,10 +37,55 @@ div.pagination {
 
   a {
     text-decoration: none;
-    color: black;
+    color: #000;
+
     &:hover,
     &:focus {
       text-decoration: underline;
     }
   }
+}
+
+.stats {
+  overflow: auto;
+  margin-top: 0;
+  padding: 0;
+
+  a {
+    float: left;
+    padding: 0 10px;
+    border-left: 1px #aaa;
+    color: #aaa;
+
+    &:first-child {
+      padding-left: 0;
+      border: 0;
+    }
+
+    &:hover {
+      text-decoration: none;
+      color: blue;
+    }
+  }
+
+  strong {
+    display: block;
+  }
+}
+
+.user_avatars {
+  overflow: auto;
+  margin-top: 10px;
+
+  .gravatar {
+    margin: 1px 1px;
+  }
+
+  a {
+    padding: 0;
+  }
+}
+
+.users.follow {
+  padding: 0;
 }
